--- a/Tricorder/res/values/arrays.xml
+++ b/Tricorder/res/values/arrays.xml
@@ -16,5 +16,23 @@
         <item>FULL</item>  
     </string-array>
     
+    <!-- Entry names for the screen orientation menu. -->
+    <string-array name="prefs_orient_entries">
+        <item>Default</item>
+        <item>Portrait</item>
+        <item>Landscape</item>  
+        <item>User preference</item>  
+        <item>Device orientation</item>  
+    </string-array>
+
+    <!-- Values for the sound preferences menu. -->
+    <string-array name="prefs_orient_values">
+        <item>-1</item>
+        <item>1</item>  
+        <item>0</item>
+        <item>2</item>  
+        <item>4</item>  
+    </string-array>
+    
 </resources>
 
