--- a/Tricorder/res/xml/preferences.xml
+++ b/Tricorder/res/xml/preferences.xml
@@ -18,6 +18,18 @@
                 android:summary="@string/prefs_ping_summary" />
             
     </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/prefs_cat_display">
+                           
+        <ListPreference
+                android:key="orientMode"
+                android:title="@string/prefs_orient"
+                android:summary="@string/prefs_orient_summary"
+                android:entries="@array/prefs_orient_entries"
+                android:entryValues="@array/prefs_orient_values"
+                android:dialogTitle="@string/prefs_orient_title" />
+            
+    </PreferenceCategory>
   
     <PreferenceCategory android:title="@string/prefs_cat_data">
                         
