Set default prefs; default to portrait mode.

--- a/Tricorder/res/values/arrays.xml
+++ b/Tricorder/res/values/arrays.xml
@@ -18,7 +18,7 @@
     
     <!-- Entry names for the screen orientation menu. -->
     <string-array name="prefs_orient_entries">
-        <item>Default</item>
+        <item>System default</item>
         <item>Portrait</item>
         <item>Landscape</item>  
         <item>User preference</item>  
