Added keep awake option.

--- a/Audalyzer/res/xml/preferences.xml
+++ b/Audalyzer/res/xml/preferences.xml
@@ -12,6 +12,13 @@
                 android:entryValues="@array/prefs_orient_values"
                 android:dialogTitle="@string/prefs_orient_title"
                 android:defaultValue="1" />
+                                    
+        <CheckBoxPreference
+                android:key="keepAwake"
+                android:title="@string/prefs_wakelock"
+                android:summaryOff="@string/prefs_wakelock_summary_off"
+                android:summaryOn="@string/prefs_wakelock_summary_on"
+                android:defaultValue="false" />
             
     </PreferenceCategory>
   
