--- a/Hermit Android/res/layout/main.xml
+++ b/Hermit Android/res/layout/main.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+	android:orientation="vertical" android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+	
+	<Button android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:id="@+id/button_chirp"
+		android:text="Chirp"></Button>
+		
+	<Button android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:id="@+id/button_bleep"
+		android:text="Bleep"></Button>
+		
 </LinearLayout>
