--- a/Tricorder/res/values/arrays.xml
+++ b/Tricorder/res/values/arrays.xml
@@ -33,6 +33,50 @@
         <item>2</item>  
         <item>4</item>  
     </string-array>
+        
+    <!-- Entry names for the sample rate menu. -->
+    <string-array name="prefs_sample_entries">
+        <item>Standard</item>
+        <item>Medium</item>
+        <item>High</item>  
+    </string-array>
+
+    <!-- Values for the sample rate menu. -->
+    <string-array name="prefs_sample_values">
+        <item>8000</item>  
+        <item>12000</item>
+        <item>16000</item>
+    </string-array>
+    
+    <!-- Entry names for the decimation menu. -->
+    <string-array name="prefs_decimate_entries">
+        <item>Process all</item>
+        <item>Process 1 in 2</item>
+        <item>Process 1 in 3</item>  
+        <item>Process 1 in 4</item>  
+    </string-array>
+
+    <!-- Values for the decimation menu. -->
+    <string-array name="prefs_decimate_values">
+        <item>1</item>  
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+    
+    <!-- Entry names for the histogram averaging menu. -->
+    <string-array name="prefs_average_entries">
+        <item>None</item>
+        <item>Fast</item>
+        <item>Slow</item>  
+    </string-array>
+
+    <!-- Values for the histogram averaging menu. -->
+    <string-array name="prefs_average_values">
+        <item>1</item>
+        <item>4</item>  
+        <item>12</item>
+    </string-array>
     
 </resources>
 
