--- a/Tricorder/res/xml/preferences.xml
+++ b/Tricorder/res/xml/preferences.xml
@@ -44,5 +44,36 @@
             
     </PreferenceCategory>
      
+    <PreferenceCategory android:title="@string/prefs_cat_audio">
+
+        <ListPreference
+                android:key="sampleRate"
+                android:title="@string/prefs_sample"
+                android:summary="@string/prefs_sample_summary"
+                android:entries="@array/prefs_sample_entries"
+                android:entryValues="@array/prefs_sample_values"
+                android:dialogTitle="@string/prefs_sample_title"
+                android:defaultValue="8000" />
+
+        <ListPreference
+                android:key="decimateRate"
+                android:title="@string/prefs_decimate"
+                android:summary="@string/prefs_decimate_summary"
+                android:entries="@array/prefs_decimate_entries"
+                android:entryValues="@array/prefs_decimate_values"
+                android:dialogTitle="@string/prefs_decimate_title"
+                android:defaultValue="2" />
+
+        <ListPreference
+                android:key="averageLen"
+                android:title="@string/prefs_average"
+                android:summary="@string/prefs_average_summary"
+                android:entries="@array/prefs_average_entries"
+                android:entryValues="@array/prefs_average_values"
+                android:dialogTitle="@string/prefs_average_title"
+                android:defaultValue="4" />
+
+    </PreferenceCategory>
+     
 </PreferenceScreen>
 
