--- a/Tricorder/res/values/arrays.xml
+++ b/Tricorder/res/values/arrays.xml
@@ -78,5 +78,180 @@
         <item>12</item>
     </string-array>
     
+        
+    <!-- Section titles for the top-level help. -->
+	<string-array name="help_titles">
+		<item>Introduction</item>
+		<item>Controls</item>
+		<item>Views</item>
+		<item>@array/help_screens_titles</item>
+		<item>Menu</item>
+		<item>General</item>
+	</string-array>
+
+    <!-- Section contents for the top-level help. -->
+    <string-array name="help_texts">
+    
+<item>Tricorder displays real data from the sensors built into your device.\n\
+\n\
+The following sections describe how to use Tricorder, and how to interpret
+the displays.  For further information, see the "About" box, which contains
+a link to the project home page.</item>
+
+<item>Select between the available data views (see Views below) using the buttons
+on the left.\n\
+\n\
+In the GRAV and MAG views:\n\
+• touch the X/Y axis plot to switch between absolute and relative modes.
+When you enter relative mode, the current values are stored; the plot
+starts displaying changes relative to those values.\n\
+• touch the numeric data display to toggle it to an X/Y/Z graph plot; red
+is X, green is Y, and blue is Z.\n\
+\n\
+In the GEO view, touch the satellite display to change its mode.\n\
+\n\
+In the EMS view, touch the \"WiFi Pwr\" button at the top-right to turn the
+WiFi on and off.\n\
+\n\
+In the SOL view, touch the \"Mode Alt\" button at the top-right to display
+different information; tap the Sun image to see different Sun views.</item>
+
+<item>Tricorder has multiple views, which you can switch between
+using the buttons on the left.  Each view displays a particular type of
+information, as detailed in the sections below.</item>
+
+<item>@array/help_screens_texts</item>
+
+<item>The \"menu\" button gets you to the program settings, the
+help screen (this one), and the about box.  In settings, you can set the
+basic sound level to off, quiet, or loud (note that you can also control the
+sound volume using the hardware volume keys).  You can enable WiFi ping;
+see \"EMS\" above.  You can set your preferences for how the display
+rotates, or not.</item>
+
+<item>Note that the availability and accuracy of the information
+presented depends
+on the underlying hardware.  In particular the magnetic field data is known
+to be unreliable on some currently available devices, and the gravity reading
+can be affected by playing music.\n\
+\n\
+You\'ll see a link to the project
+home page at the bottom of this screen; check it out for more info on
+Tricorder.  Tricorder is an open project, so if you want to join in and
+make contributions, you can.  See the project page for information.</item>
+
+    </string-array>
+    
+            
+    <!-- Section titles for the screens help. -->
+    <string-array name="help_screens_titles">
+    
+<item>The GRAV Screen</item>
+
+<item>The MAG Screen</item>
+
+<item>The ACO Screen</item>  
+
+<item>The GEO Screen</item>  
+
+<item>The EMS Screen</item>  
+
+<item>The SOL Screen</item>  
+
+    </string-array>
+
+    <!-- Section contents for the screens help. -->
+    <string-array name="help_screens_texts">
+    
+<item><b>GRAV</b> shows the local gravitational field, showing the individual
+components on an X/Y plot and a vertical gauge for the Z axis.  Additionally
+an altitude gauge shows the angle above or below the tricorder\'s horizontal
+plane.  Below this the absolute magnitude of the gravitational field
+is graphed, and then the raw numeric data is displayed, in units of m/s²:
+\"X\", \"Y\" and \"Z\" are the acceleration values in each of the three
+dimensions; \"Az\" is the direction of the gravitational field in the X-Y
+plane; \"Alt\" is the elevation of the gravitation pull above or below
+the horizontal, in degrees; and \"Mag\" is the absolute magnitude of the
+gravitational field, in units of m/s².  When this becomes zero,
+you are in free fall.</item>
+
+<item><b>MAG</b> shows the local magnetic field, in the same format.  The X-Y plot
+can be used like a compass; keep the altitude at zero to see exactly which
+way the magnetic field is pointing.  The values displayed are in micro-Tesla.</item>
+    
+<item><b>ACO</b> performs an analysis of the local acoustic environment.  Displays
+a waveform diagram, a frequency spectrum, and power level of the sound
+as received by the device\'s microphone.\n\
+\n\
+The waveform and spectrum graphs auto-scale, so loud and quiet sounds can
+both be displayed in a useful way.  The Power meter shows the power level
+relative to the maximum possible input from the microphone, in dB; so
+0dB is the maximum the device can register, -10dB is 1/10th of this, -20dB
+is 1/100th of the max, etc.  The power meter also shows peak markers, and
+a background bar displays a rolling average.  The rolling average is also
+displayed numerically.</item>
+
+<item><b>GEO</b> shows geographic information from the various providers which
+your device has.  \"Cellular\" displays location from the cellular phone network;
+\"GPS\" is the GPS location, if GPS is enabled.  Below these an indication
+of the satellites in view is displayed; tap it to toggle between a sky diagram
+and signal strength bars.  The sky diagram also indicates true north (not
+magnetic north, although the accuracy still depends on your device\'s
+magnetometer, which may not be great).\n\
+\n\
+Locations are shown in latitude and longitude degrees and minutes, with
+fractional minutes.  \"Alt\" is the altitude in metres, and \"Acc\" is the
+estimated accuracy of
+the fix in metres.  If the location provider provides course data,
+then \"Head\" is the direction you are moving in, and \"Spd\" is your speed
+in metres per second.\n\
+\n\
+The latest available fix data, if there is any, will always be displayed.
+Note that this data may be old.  The data is coloured to indicate its
+age, and the age is also shown in the header bar for each location
+provider.</item>
+
+<item><b>EMS</b> scans the electromagnetic spectrum for
+radio signals (as supported by hardware).  Detected signals are shown
+as strength bars and a numeric strength indicator -- zero is no signal
+(or too weak to be useful); 31 is maximum for cellular, and 41 seems to be
+maximum for WiFi.  At the top-right corner you
+will see a \"WiFi Pwr\" button which turns the WiFi on and off.\n\
+\n\
+For cellular, we display the cell ID, the network provider, and the
+signal strength above the strength bar.  For WiFi networks, we display
+the frequency in GHz, access mode, network ID, and signal
+strength.  The access mode is blank for an open access point;
+\'!\' for an ad-hoc network (beware!); \'*\' for WEP encryption;
+\'#\' for WPA encryption; \'?\' for unknown.  The WiFi data
+is refreshed periodically; the age of the displayed WiFi data is shown
+in the WiFi header bar.\n\
+\n\
+In the preferences you can enable WiFi ping.  With this on, the device
+will ping after each WiFi network scan; an echo ping
+indicates the strength of the strongest detected signal.  (No echo means
+no detected WiFi.)</item>
+
+<item><b>SOL</b> displays information on the state of the Sun and solar wind.
+This information is downloaded from the internet, and it\'s downloaded
+as a very low-priority task so as not to affect your device\'s performance.
+Hence, it may take some time for the information to actually appear.
+At the top-right corner you will see a \"Mode Alt\" button
+to toggle between two different display modes.\n\
+\n\
+The \'Protons\' graph displays low- (blue), medium- (yellow), and high-
+(red) energy protons; the \'Electrons\' graph displays low- (blue) and high-
+(red) energy electrons.  The \'Spots,Flares\' graph displays the numbers
+of sunspots (red), optical flares (blue), and X-ray flares (purple).  The
+Sun image shows images of the Sun in different wavelengths of light; tap it
+to step through the available images.\n\
+\n\
+The Sun images are downloaded directly from SOHO.  If you see banner text
+on the image, like \"CCD Bakeout\", this generally indicates that images
+are unavailable as the satellite is doing a maintenance routine on the
+camera.  Google \"CCD Bakeout\" for more (it\'s interesting).</item>
+
+    </string-array>
+    
 </resources>
 
