--- a/Audalyzer/res/values/arrays.xml
+++ b/Audalyzer/res/values/arrays.xml
@@ -87,7 +87,8 @@
 		<item>Menu</item>
 		<item>Settings</item>  
 		<item>@array/help_prefs_titles</item>
-		<item>The Project</item>
+		<item>More Information</item>
+		<item>@array/help_info_titles</item>
     </string-array>
 
     <!-- Help section texts. -->
@@ -162,14 +163,12 @@ above.  The available settings are detailed in the following sections.</item>
 
 <item>@array/help_prefs_texts</item>
 
-<item>You\'ll see a link to the project home page in the about box; check it
-out for more info on Audalyzer.  There is a discussion board where you
-can suggest ideas.  If you want to report a bug, use the Issue tracker
-on this page.\n\
-\n\
-Audalyzer is an open project, so if you
-want to join in and make contributions, you can.  See the project page for
-information.</item>
+<item>If you would like more information and help with Audalyzer, or if you
+want to to report a bug, there are some on-line
+resources which may be of interest, as described in the following
+sections.</item>
+
+<item>@array/help_info_texts</item>
 
     </string-array>
         
@@ -177,11 +176,11 @@ information.</item>
     <!-- Section titles for the settings help. -->
     <string-array name="help_prefs_titles">
 
-<item>Audio Analysis</item>  
+<item>Audio Analysis</item>
 
 <item>Display</item>
 
-<item>Debug</item>  
+<item>Debug</item>
 
     </string-array>
 
@@ -225,6 +224,53 @@ performance statistics on-screen.  These stats are updated every 5
 seconds and include frames per second, computation time, drawing time, and
 the average time taken to perform frequency analysis (FFT) of a block of
 data.</item>
+
+    </string-array>
+          
+    <!-- Section titles for the more info help. -->
+    <string-array name="help_info_titles">
+
+<item>Discussion Groups</item>
+
+<item>Reporting Bugs</item>
+
+<item>Join In</item>
+
+    </string-array>
+
+    <!-- Section contents for the more info help. -->
+    <string-array name="help_info_texts">
+
+<item>There is a discussion board where you
+can suggest ideas for Audalyzer, share experiences and thoughts with
+other users, and generally waffle.  Please note that this group
+is shared with the other Moonblink projects, so mention
+Audalyzer when you post:\n\
+\n\
+• http://groups.google.com/group/moonblink/topics</item>
+
+<item>If you want to report a bug, you can use the Moonblink Issue tracker.
+Before you post, <b>please</b> look through the existing issues -- including
+closed issues -- before raising a new one.  Your problem may already have been
+solved.\n\
+\n\
+If you do need to raise a new issue:\n\
+• The issue tracker is used by a number of projects.  Please click on the
+\"Product-\" label to set the product you are reporting against.  You can
+also set the other fields as appropriate.\n\
+• Please tell me what device, and what version of Android, you are using.\n\
+• If the bug is a crash, then please attach a log if you possibly can.
+If you don\'t know how, don\'t sweat it.\n\
+\n\
+So, the issue tracker is here:\n\
+\n\
+• http://code.google.com/p/moonblink/issues/list</item>
+
+<item>Audalyzer is an open project, so if you
+want to join in and make contributions, you can.  See the project page for
+information:\n\
+\n\
+• http://code.google.com/p/moonblink/wiki/Audalyzer</item>
 
     </string-array>
     
